# reimplement_shapez2

./: .gitattributes  LICENSE  README.md  pyproject.toml
src/shapez2_automation/: cli.py  parse.py  proc.py  schemas.py  solver.py  test_schemas.py  tokenizer.py  viewer2d.py
src/shapez2_automation/procs/: colorize.py  copy.py  crystarize.py  merge.py  pin.py  proc_base.py  rotate.py  separate.py  swap.py
