[project]
name = "shapez2-automation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rokkish" }
]
dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shapez2_automation"]

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
